# CirbuildSTG

./: .gitignore  4_tap_moving_average_filter_hls.cpp  4_tap_moving_average_filter_tb.cpp  4_tap_moving_average_filter_tb_exec  Dockerfile  Implementation_plan_CirbuildSTG_TUI_v0.1.md  README.md  SKILL.md  Spec2RTL_implementation.md  cirbuild_source_code.py  clean_codebase_spec2rtl.txt  env_example.md  pyproject.toml  requirements.txt  start.bat  start.sh
Cirbuild-Spec2RTL/: .gitignore  Implementation Plan v0.2.md
Cirbuild-Spec2RTL/spec2rtl/: pipeline.py
Test_output_C++/: 4_tap_moving_average_filter_hls_old.cpp  fourtapmovingaveragefilter_hls.cpp  movingaveragefilter_4tap_hls.cpp
cirbuild/: __init__.py  __main__.py  cli.py
cirbuild/agent/: __init__.py  client.py  tools.py
cirbuild/config/: __init__.py  default_config.yaml  settings.py
cirbuild/librelane/: __init__.py  nix_bridge.py  runner.py
cirbuild/memory/: __init__.py  rag_store.py
cirbuild/pipeline/: __init__.py  bridge.py  json_spec.py
cirbuild/workspace/: __init__.py  manager.py
docs/: AGENT_EDITING_IMPROVEMENTS.md  AGENT_EDITING_QUICK_REFERENCE.md  TECH_STACK.md  TUTORIALS.md
plans/: Cirbuild_Spec2RTL_Integration_Plan.md
spec2rtl/: __init__.py  __main__.py
spec2rtl/agents/: __init__.py  module2_coding.py
spec2rtl/config/: settings.py
spec2rtl/core/: __init__.py  logging_config.py
spec2rtl/hls/: reflection.py
spec2rtl/librelane/: librelane_runner.py
spec2rtl/llm/: __init__.py
spec2rtl/prompts/: hls_reflector.jinja2  module1_decomposer.jinja2  module1_descriptor.jinja2  module1_summarizer.jinja2  module1_verifier.jinja2  module2_cpp_coder.jinja2  module2_pseudocoder.jinja2  module2_verifier.jinja2  module4_optimizer.jinja2
spec2rtl/tests/: test_config.py
spec2rtl/utils/: __init__.py  code_utils.py
(+24 files in other folders)
