[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cirbuild-stg"
version = "0.1.0"
description = "CirbuildSTG - Agentic AI EDA tool for Spec-to-GDSII workflow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CirbuildProject Contributors"}
]
dependencies = [
    "pypdfium2>=4.0.0",
    "autogen-agentchat>=0.2.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "git+https://github.com/CirbuildProject/Cirbuild-Spec2RTL.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cirbuild-stg = "cirbuild_stg.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cirbuild_stg*"]

[tool.setuptools]
package-dir = {"" = "."}
